<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fcorrionero.appinformatica.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_clientFragment"
            app:destination="@id/clientFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.fcorrionero.appinformatica.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.fcorrionero.appinformatica.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/clientFragment"
        android:name="com.fcorrionero.appinformatica.ui.newClient.ClientFragment"
        android:label="@string/client_data"
        tools:layout="@layout/fragment_client" >
        <action
            android:id="@+id/action_clientFragment_to_deviceFragment"
            app:destination="@id/deviceFragment" />
    </fragment>
    <fragment
        android:id="@+id/deviceFragment"
        android:name="com.fcorrionero.appinformatica.ui.newClient.DeviceFragment"
        android:label="@string/device"
        tools:layout="@layout/fragment_device" >
        <action
            android:id="@+id/action_deviceFragment_to_issueFragment"
            app:destination="@id/issueFragment" />
    </fragment>
    <fragment
        android:id="@+id/issueFragment"
        android:name="com.fcorrionero.appinformatica.ui.newClient.IssueFragment"
        android:label="@string/issue_title"
        tools:layout="@layout/fragment_issue" >
        <action
            android:id="@+id/action_issueFragment_to_budgetFragment"
            app:destination="@id/budgetFragment" />
    </fragment>
    <fragment
        android:id="@+id/budgetFragment"
        android:name="com.fcorrionero.appinformatica.ui.newClient.BudgetFragment"
        android:label="@string/budget_title"
        tools:layout="@layout/fragment_budget" />
</navigation>